client/src/index.css
:root {
    /*Light Theme*/    
    --light-1: #eeeeee;
    --light-2: #D9D9D9;
    --light-3: #BFBFBF;
    --light-4: #A6A6A6;
    --light-5: #8C8C8C;
    /*Dark Theme*/
    --dark-1: #05080D; 
    --dark-2: #141A26; 
    --dark-3: #516073; 
    --dark-4: #A8B5BF; 
    --dark-5: #F2F2F2; 
}

* {
    box-sizing: border-box;
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
}

html {
    height: 100%;
    width: 100%;
    background-color: var(--dark-5);
}

#root {
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: stretch;
}

.navBar {
    width: auto;
    height: 50px;
    padding: 10px;
    background-color: var(--light-2);
    display: flex;
    align-items: center;
    justify-content: flex-end;
    border-bottom: 1px solid var(--light-3);
}

.navTitle {
    margin-right: auto;
    color: var(--light-5);
    text-decoration: none;
}

.loggedInAs {
    margin-right: 10px;
}

.homeButtons {
    display: flex;
    justify-content: center;
    align-items: center;
}

.loginButton {
    background-color: transparent;
    border: none;
    width: 200px;
    height: 40px;
    font-size: 16px;
}

.logoutButton {
    background-color: transparent;
    border: none;
    width: 200px;
    height: 40px;
    font-size: 16px;
}

.projectView {
    flex-grow: 1;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: flex-start;
}

.projectNav {
    padding: 10px;
    height: 100%;
    width: 200px;
    border-right: 1px solid var(--light-5);
}

.projectSelection {
    padding: 10px;
    align-self: stretch;
    flex-grow: 1;
    display: flex;
    flex-direction: row;
    justify-content: center;
    overflow: scroll;
}

.allColumns {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
}

.columnTitle {
    text-align: center;
    color: var(--light-5)
}

.dragItems {
    list-style-type: none;
    padding: 0;
}

.dragItems > li {
    border: 1px solid var(--light-3);
    padding: 10px;
    width: 200px;
    height: 80px;
    background-color: var(--light-1);
    margin: 0px 20px 10px 20px;
}

.loaderContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
}

.loader {
    width: 80px;
    height: 80px;
    border-radius: 50%;
    border: 8px solid var(--light-5);
    animation:
      s10-1 0.8s infinite linear alternate,
      s10-2 1.6s infinite linear;
  }
  @keyframes s10-1{
     0%    {clip-path: polygon(50% 50%,0       0,  50%   0%,  50%    0%, 50%    0%, 50%    0%, 50%    0% )}
     12.5% {clip-path: polygon(50% 50%,0       0,  50%   0%,  100%   0%, 100%   0%, 100%   0%, 100%   0% )}
     25%   {clip-path: polygon(50% 50%,0       0,  50%   0%,  100%   0%, 100% 100%, 100% 100%, 100% 100% )}
     50%   {clip-path: polygon(50% 50%,0       0,  50%   0%,  100%   0%, 100% 100%, 50%  100%, 0%   100% )}
     62.5% {clip-path: polygon(50% 50%,100%    0, 100%   0%,  100%   0%, 100% 100%, 50%  100%, 0%   100% )}
     75%   {clip-path: polygon(50% 50%,100% 100%, 100% 100%,  100% 100%, 100% 100%, 50%  100%, 0%   100% )}
     100%  {clip-path: polygon(50% 50%,50%  100%,  50% 100%,   50% 100%,  50% 100%, 50%  100%, 0%   100% )}
  }
  @keyframes s10-2{ 
    0%    {transform:scaleY(1)  rotate(0deg)}
    49.99%{transform:scaleY(1)  rotate(135deg)}
    50%   {transform:scaleY(-1) rotate(0deg)}
    100%  {transform:scaleY(-1) rotate(-135deg)}
  }

